fixed problem with height of basket_preview not displaying correctly when hovering basket button on ie

--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview-hover.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview-hover.scss
@@ -93,3 +93,10 @@
 		padding: 1rem;
 	}
 }
+
+html.ie .basket-preview-hover {
+	@include media-breakpoint-up(sm) {
+		height: 95vh;
+		min-height: 95vh;
+	}
+}
